# customer-analysis-service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose-local.yaml  docker-compose.yaml  main.py  prometheus.yml  pyproject.toml  requirements.txt  scrapy.cfg
cas_api/: deps.py  utils.py  worker.py
cas_api/v1/routers/: analysis_interests.py  analysis_sentiments.py  analysis_similarity.py  api.py  pipeline.py  preparer.py  product.py  products.py  provider.py  result.py  visualizer_analysis_value.py  visualizer_histogram.py  visualizer_quantity.py
cas_shared/db/: database.py  utils.py
cas_shared/db/models/: __init__.py  customer.py  review.py
cas_shared/db/repository/: comment.py  customer.py  product.py  review.py
cas_shared/exceptions/: cas_api_error.py
cas_shared/schemas/: analysis.py  base.py  exception.py  product.py  task.py  visualizer.py
cas_worker/: worker.py
cas_worker/db/models/: product.py
cas_worker/db/repository/: comment.py  customer.py  product.py  review.py
cas_worker/pipelines/: shaper.py
cas_worker/services/preparer/: sentiment.py  similarity.py
cas_worker/services/provider/: interests.py  sentiment.py  similarity.py
cas_worker/services/scraper/: items.py  main.py  settings.py
cas_worker/services/visualizer/: group.py  maps.py  visualizer.py
cas_worker/tasks/: base.py
cas_worker/tasks/analysis_preparer/: base.py  sentiment.py  similarity.py
cas_worker/tasks/analysis_provider/: base.py  interests.py  sentiment.py  similarity.py  utils.py
cas_worker/tasks/preparer/: base.py  sentiment.py  similarity.py
cas_worker/tasks/provider/: base.py  interests.py  sentiment.py  similarity.py  utils.py
cas_worker/tasks/scraper/: main.py  settings.py
cas_worker/tasks/scraper_preparer/: items.py  settings.py
cas_worker/tasks/visualizer/: base.py  group.py  histogram.py  maps.py
cas_worker/tests/preparer/: sentiment.py  similarity.py
cas_worker/tests/scraper/: main.py  (+1 more)
customer_analysis_service/: config.py
customer_analysis_service/api/: deps.py
customer_analysis_service/db/: database.py
customer_analysis_service/services/: __init__.py
customer_analysis_service/utils/: api.py
deploy/: DockerfileAPI  DockerfileWorker  requirements_api.txt  requirements_worker.txt
docker/: docker-compose.yaml
docs/: index.html  swagger.yaml
migrations/: env.py
migrations/versions/: 0b652122f657_migration.py  0d1004d74de5_migration.py  12cde90b8230_similarity_analysis_tables_migration.py  2c80840f0e46_review_sentiment_analysis_migration.py  3b598d3ee4cb_comment_sentiment_analysis_migration.py  d2077004757d_migration.py  f512c266f41f_initial_migration.py
(+127 files in other folders)
