[tool.poetry]
name = "customer-analysis-service"
version = "0.1.0"
description = ""
authors = ["Egorov Mikhail <m-5321e@yandex.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "customer_analysis_service"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"
fastapi = {extras = ["all"], version = "^0.98.0"}
fake-useragent = "^1.1.3"
sqlmodel = "^0.0.8"
scrapy-rotating-proxies = "^0.6.2"
environs = "^9.5.0"
psycopg2 = "^2.9.6"
translators = "^5.7.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
