[tool.poetry]
name = "customer-analysis-service"
version = "0.1.0"
description = ""
authors = ["Egorov Mikhail <m-5321e@yandex.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "customer_analysis_service"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.8"
environs = "^9.5.0"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
requests = "^2.31.0"
celery = {extras = ["redis"], version = "^5.3.1"}

[tool.poetry.group.api.dependencies]
fastapi = {extras = ["all"], version = "^0.98.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}

[tool.poetry.group.worker.dependencies]
scrapy = "^2.9.0"
fake-useragent = "^1.1.3"
scrapy-rotating-proxies = "^0.6.2"
translators = "^5.7.8"
transformers = "^4.30.2"
torch = "^2.0.1"
geopy = "^2.3.0"
faiss-cpu = "^1.7.4"
pandas = "^2.0.3"
plotly = "^5.15.0"
kaleido = "0.1.0.post1"
spacy = "^3.6.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
